removed naming bug and changed style for too large icons
git-svn-id: https://plugins.svn.wordpress.org/bbpress-unread-posts-v2/trunk@1136637 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .bbpresss_unread_posts_icon{
 	float:left;
 	margin-right:6px;
+	max-width: 45px;
 }
 
 .bbpresss_unread_posts_icon a img{
